# modern-3d-basics

./: CMakeLists.txt  vcpkg.json
Projections/: CMakeLists.txt
Projections/src/: main.cpp
Shaders/: CMakeLists.txt
Shaders/src/: ShaderProgram.cpp  main.cpp
Uniforms/: CMakeLists.txt
Uniforms/include/: Mesh3D.h  Object3D.h
Uniforms/src/: ShaderProgram.cpp  main.cpp
VertexBuffers/: CMakeLists.txt
VertexBuffers/src/: main.cpp
